is bar final hai bhai

--- a/views/finalPage.ejs
+++ b/views/finalPage.ejs
@@ -51,7 +51,7 @@
           So can CodeWalkerz consider you a friend?<br>
           If yes, take the help of your new friend to go forward from this riddle.</em></q></p>
                 
-        <p><em>Guess the song name and give it to.</em></p>
+        <p><em>Guess the song name and submit.</em></p>
         </div>
         <div >
             <audio src="./../Music/<%=teamId%>.mp3" controls ></audio>
