is bar to final commit hai bc

--- a/views/firstPage.ejs
+++ b/views/firstPage.ejs
@@ -96,6 +96,7 @@ background-image: linear-gradient(319deg, #663dff 0%, #aa00ff 37%, #cc4499 100%)
     <div class="q1" style="font-size:23px;">
       <p>In whatever direction he turns, I also turn in that direction and his name is my identity.</p>
       <p>He comes in day and leaves at night but he always stays by our side.</p>
+      <p>Can you guess who am I?</p>
       <p>Still can not figure it out?</p>
       <p>I am a Zahra.</p>
     </div>
