--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
   </style>
 </head>
 
-<body style="background-image: linear-gradient(to bottom, #ffffff 22%, #330867 100%)">
+<body style="background-image: linear-gradient(to bottom, #ffffff 18%, #310369 100%);position: relative; height: 100%;">
   <div>
     <nav class="navbar navbar-expand-lg  ">
       <div class="container-fluid">
@@ -86,17 +86,26 @@
       </div>
     </div>
 
-    <div class=" flex flex-column m-5">
-        <form action="/yrtbsdf6529m7hdsfjh" method="post">
+    <div class=" flex flex-column" style="margin-top:50px;margin-bottom: 150px;">
+        <form id="form">
           <div class="p-3">
-            <input type="text" name="teamName" class=" m-3 p-2 rounded" placeholder="Team Name "  required>
-            <input type="text" name="teamId" class="p-2 m-3 rounded" placeholder="Team ID"  required>
+            <input type="text" id="teamName" name="teamName" class=" m-2 p-2 rounded" placeholder="Team Name "  required>
+            <input type="text" id="teamId" name="teamId" class="p-2 m-23 rounded" placeholder="Team ID"  required>
           </div>
             <input type="submit" value="Submit" class="btn btn-outline-primary btn-lg bg-primary text-white" >
-        </form>
+        </form> 
+    </div>
+  </div>
+  
+  <div style="position: absolute; left: 76%; top: 82%; width: 270px; text-align: center;">
+    <img src="./images/hello.png" alt="hello image" width="100px" onmouseover="typeWriter()">
+    <div style=" background-color: white; border-radius: 8px;font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 600;" id="demoIdBox">
+        <div style="color: #310369;" id="text"></div>
+        <div style="color: #ffc83d; font-weight: 800; font-size: 24px;" id="demoId"></div>
     </div>
   </div>
 
-    
+  <script src="script/index.js"></script>
+
 </body>
 </html>
