Form link for Juniors

--- a/views/finalPage.ejs
+++ b/views/finalPage.ejs
@@ -39,7 +39,7 @@
   <div>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand code" href="https://forms.gle/s9R796iAuZsioHwX7" style="color: white;"><\CodeWalkerz></a>
+        <a class="navbar-brand code" href="https://forms.gle/9thzjspGqkdGFX9W8" style="color: white;"><\CodeWalkerz></a>
           <img class="logoImage d-flex" role="search" src="./../images/SCA_LOGO-removebg-preview2.png">
       </div>
     </nav>
